hard-gists/329142c1740500bd3797/run.log
=== Docker Run Log for 329142c1740500bd3797 ===
Started at: Mi 29. Okt 13:48:02 CET 2025

[2025-10-29 13:48:03] START: Running container for 329142c1740500bd3797
[2025-10-29 13:48:03] SUCCESS: Container 2fdcfbf53e9a2c58d60ce17f9310755d637a746b875173a4b128e732de5cdb30 started for 329142c1740500bd3797
=== Container logs for 329142c1740500bd3797 ===
  File "/snippet.py", line 21
    print "NEW:", newloc.description()
    ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
SyntaxError: Missing parentheses in call to 'print'. Did you mean print(...)?
=== End of logs for 329142c1740500bd3797 ===
[2025-10-29 13:48:05] INFO: Container 2fdcfbf53e9a2c58d60ce17f9310755d637a746b875173a4b128e732de5cdb30 has stopped
